[package]
name = "linono_pyextractor"
version = "0.1.0"
edition = "2021"

[lib]
name = "linono_pyextractor"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.39"
pyo3 = { version = "0.23.4", features = ["extension-module", "chrono"] }
pyo3-log = "0.12.3"
linono_extractor = { "path" = "../linono_extractor"}
